Fix both sequential problems

--- a/Lab01/par/Makefile
+++ b/Lab01/par/Makefile
@@ -4,10 +4,11 @@ SRC = lab1.c
 CFLAGS = -g -fPIC -m64 -Wall
 LFLAGS = -fPIC -m64 -Wall
 CC = mpicc
+LIBS = -lm
 
 all:
 	$(CC) $(CFLAGS) -c $(SRC)
-	$(CC) $(LFLAGS) $(COMP) -o $(PROG)
+	$(CC) $(LFLAGS) $(COMP) -o $(PROG) $(LIBS)
 
 run: ./$(PROG)
 	mpirun -np ${NPROC} $(PROG) ${ARGS}
