Changement du makefile gnu99 au lieu de c99

--- a/Lab02/Makefile
+++ b/Lab02/Makefile
@@ -1,8 +1,8 @@
 PROG = run.sh
 COMP = lab2.o
 SRC = lab2.c
-CFLAGS = -g -std=c99 -fopenmp -fPIC -m64 -Wall
-LFLAGS = -std=c99 -fopenmp -fPIC -m64 -Wall
+CFLAGS = -g -std=gnu99 -fopenmp -fPIC -m64 -Wall
+LFLAGS = -std=gnu99 -fopenmp -fPIC -m64 -Wall
 CC = gcc
 
 all:
