Add matrix printer

--- a/Lab03/Makefile
+++ b/Lab03/Makefile
@@ -1,14 +1,14 @@
 PROG = run.sh
-COMP = main.o
-SRC = main.c
-CFLAGS = -g -fPIC -m64 -Wall
-LFLAGS = -fPIC -m64 -Wall
+COMP = main.o printer.o
+SRC = main.c printer.c
+CFLAGS = -g -std=gnu99 -fPIC -m64 -Wall
+LFLAGS = -std=gnu99 -fPIC -m64 -Wall
 CC = mpicc
 LIBS = -lm
 
 all:
 	$(CC) $(CFLAGS) -c $(SRC)
-	$(CC) $(LFLAGS) $(COMP) -o $(PROG) $(LIBS)
+	$(CC) $(LFLAGS) $(COMP) -o $(PROG) $(LIBS)  
 
 run: ./$(PROG)
 	mpirun -np ${NPROC} $(PROG) ${ARGS}
